# softcopyright-agent

./: .gitignore  README.md  pyproject.toml  软著Agent设计方案.md
docs/analysis/: 2026-04-21-optimization-and-feature-analysis.md
docs/plans/: 2026-04-21-softcopyright-agent-execution-plan.md  2026-04-21-softcopyright-agent-llm-review-execution-plan.md
docs/requirements/: 2026-04-21-softcopyright-agent-llm-review.md  2026-04-21-softcopyright-agent.md
softcopyright_agent/: __init__.py  agent.py  aigc_reducer.py  analyzer.py  cli.py  code_generator.py  doc_writer.py  llm.py  memory.py  models.py  orchestrator.py  outline_generator.py  output_formatter.py  prompt_engine.py  review.py  ui.py  ui_styler.py
softcopyright_agent/prompts/algorithm/: analyze.md  generate_code.md  outline.md  write_chapter.md
softcopyright_agent/prompts/frontend_only/: analyze.md  generate_code.md  outline.md  write_chapter.md
softcopyright_agent/prompts/game/: analyze.md  generate_code.md  outline.md  write_chapter.md
softcopyright_agent/prompts/iot/: analyze.md  generate_code.md  outline.md  write_chapter.md
softcopyright_agent/templates/: code_structure.json
softcopyright_agent/tools/: __init__.py  base.py  quality_tool.py  registry.py
softcopyright_agent/utils/: __init__.py  diagram_renderer.py  docx_formatter.py  file_utils.py  line_counter.py  word_counter.py
tests/: test_agent_cli.py  test_analyzer_outline.py  test_generation_components.py  test_llm_review.py  test_orchestrator.py  test_prompt_themes.py  test_quality_aigc.py  test_quality_checker.py  test_ui_helpers.py
(+5 files in other folders)
