[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "softcopyright-agent"
version = "0.1.0"
description = "Local six-phase software copyright material generation agent."
requires-python = ">=3.10"
dependencies = ["streamlit>=1.36", "python-docx>=1.1"]

[project.scripts]
softcopyright-agent = "softcopyright_agent.cli:main"

[tool.setuptools.packages.find]
include = ["softcopyright_agent*"]

[tool.setuptools.package-data]
softcopyright_agent = ["prompts/**/*.md", "templates/*.json"]
